[package]
name = "my_egui_test"
version = "0.1.0"
edition = "2021"
about = "th2ch-g"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "0.3.0"
env_logger = "0.10.1"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0.77"
cfg-if = "1.0.0"
log = "0.4.20"
# winit = { version = "0.29.7", features = ["rwh_05"] }
winit = "0.29.10"
# winit = "0.28"
wgpu = "0.18.0"
egui = "0.25.0"
# egui_extras = "*"
egui-winit = "0.25.0"
egui-wgpu = "0.25.0"
rfd = "0.13.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
reqwest = { version = "0.11" }
web-sys = {version = "0.3", features = ['DragEvent','DataTransfer', 'DataTransferItem','Event','File','FileList','DataTransferItemList', "Document",
    "Window",
    "Element",
    "Location"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
