[package]
name = "my_egui_test"
version = "0.1.0"
edition = "2021"
about = "th2ch-g"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pollster = "0.3.0"
env_logger = "0.10.1"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0.77"
cfg-if = "1.0.0"
log = "0.4.20"
winit = { version = "0.29.10", features = ["rwh_05"] }
# winit = { version = "0.28.2", features = ["rwh_05"] }
# winit = "0.29.10"
# winit = { version = "0.28.2", features = ["mint"] }
egui = "0.25.0"
# egui-winit = "0.25.0"
# egui-winit = { version = "0.25.0", default-features = false, features = [
#         "links",
#         "x11",
#         "serde",
#         "puffin",
#         "bytemuck",
#         "wayland",
#         "accesskit"]}
egui-wgpu = "0.25.0"
rfd = "0.13.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "0.18.0"
egui-winit = { version = "0.25.0", default-features = false, features = ["links", "clipboard"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.18", features = ["webgl"] }
egui-winit = { version = "0.25.0", default-features = false, features = ["links"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
console_log = "1.0"

[[bin]]
name = "my_egui_test_bin"
path = "src/main.rs"
